1.5.2: 
 * Leading/trailing spaces in note titles are now ignored when making links
   to such notes. This means that creating a link titled "my note" to a note
   called "my note  " now works properly.

1.5.1: September 28, 2008
 * Implemented CSV exporting, so now you can export all of your notes to a
   CSV spreadsheet file. This currently doesn't include revision history or
   attached files.
 * Improved CSV importing so you can export a CSV of your notes from one
   Luminotes installation and import that CSV into a different Luminotes
   installation.
 * Fixed a bug in which the image preview page didn't correctly handle
   filenames containing special characters.

1.5.0: September 12, 2008
 * Initial release of Luminotes Desktop!
 * Fixed a Luminotes Desktop Internet Explorer bug in which note links within
   the "download as html" document pointed to notes in the local Luminotes
   installation instead of notes within the stand-alone document.
 * Fixed a bug in which Luminotes Desktop file attachment did not always work
   due to incorrect upload progress reporting.
 * In the revision changes pulldown, no longer showing "by desktopuser" in
   Luminotes Desktop.
 * Added a Luminotes Desktop download page.
 * Added code for supporting product download access.

1.5.0 beta 1: August 27, 2008
 * Completed the Luminotes Desktop Windows installer.
 * Improved logging, so tracebacks in production and desktop mode actually go
   to a file. Also removed logs on startup to prevent endless log growth.
 * Added a usb_luminotes.bat Windows batch file and a usb_luminotes.sh shell
   file to run Luminotes from a USB drive.
 * Moved "files" directory into ~/.luminotes or %APPDATA%\Luminotes.
 * NOTE: After upgrading to this release, you must move your Luminotes
   "files" directory into ~/.luminotes/ or you will not be able to access
   your uploaded files:
     mkdir ~/.luminotes
     chmod 700 ~/.luminotes
     mv files ~/.luminotes

1.4.27: August 22, 2008